# universal_agent_english

./: .gitignore  AGENTS.md  AGENT_V2_DESIGN.md  ENGLISH_DEMO_RECORDING_CHECKLIST.md  README.md  VOICE_ROLE_MAPPING_REPORT.md  index.html  package-lock.json  package.json
asr_service/: .env.example  README.md  requirements.txt
asr_service/app/: config.py  main.py  model_runtime.py  schemas.py  transcript_postprocess.py  websocket.py
backend/: .env.example  agent_worker.py  main.py  pyproject.toml
deploy/aliyun/: install.sh  nginx-his-agent.conf
deploy/modal/: README.md  diart_app.py
diarization_service/: .env.example  DIART_INTEGRATION_REPORT.md  README.md  requirements.txt
diarization_service/app/: __init__.py  main.py  schemas.py  session_store.py
docs/: EVALUATION.md  README.md
docs/design/: AGENT_LOOP_ENGINEERING.md  LOOP_ENGINEERING.md
html/: agent-history.html  dashboard.html  login.html  patient-editor.html  patient-management.html
loop-engineering/: NEXT_ITERATION_PROMPT.md  README.md  config.json  score-rules.json
scripts/: check-encoding.mjs  generate-human-action-catalog.mjs  llm_openai_proxy.py  serve-static-utf8.py  start_diarization_service.sh
shared/: agent-flow-trace.js  agent-input-router.js  agent-scroll-manager.js  agent-state-machine.js  agent-task-model.js  agent-task-orchestrator.js  agent-widget-bootstrap.js  agent-widget.css  agent-widget.js  generic-browser-agent.js  patient-editor-action-adapter.js  patient-field-schema.js  patient-store.js  runtime-config.js  ui-action-feedback.js  voice-input-controller.js
(+55 files in other folders)
