[project]
name = "gui-agent-universal-backend"
version = "0.2.0"
description = "Local FastAPI backend for Qwen-powered Universal Observe-Act Agent on the patient editor test page."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-dotenv",
  "requests",
]

[tool.uvicorn]
factory = false

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
